[project]
name = "assignment1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "andystan112", email = "stanica.andrei28@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.6.2",
    "bubus>=1.5.6",
]

[project.scripts]
app = "assignment1:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
